texify title stile

--- a/slides/latex-slides-2018.html
+++ b/slides/latex-slides-2018.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LaTeX Workshop</title>
+    <title>\LaTeX Workshop</title>
     <meta charset="utf-8">
     <meta name="author" content="Michael DeCrescenzo" />
     <meta name="date" content="2018-09-12" />
@@ -9,17 +9,17 @@
   </head>
   <body>
     <textarea id="source">
+
+
 class: center, middle, inverse, title-slide
 
-# LaTeX Workshop
-## UW–Madison Political Science
+# `\(\mathrm{\LaTeX}\)` Workshop
+
 ### Michael DeCrescenzo
+
 ### September 12, 2018
 
 ---
-
-
-
 
 
 class: middle, center, inverse
