theme change (lower contrast), added book img

--- a/slides/latex-slides-2018.html
+++ b/slides/latex-slides-2018.html
@@ -13,7 +13,7 @@
 
 class: center, middle, inverse, title-slide
 
-# `\(\mathrm{\LaTeX}\)` Workshop
+# Welcome to `\(\mathrm{\LaTeX}\)`
 
 ### Michael DeCrescenzo
 
@@ -338,13 +338,11 @@ R package `tikzDevice`
 
 ---
 
+class: center
 
-
-## Agenda
+## Agenda: today
 
 --
-
-Today
 
 - Get up and running
 
@@ -352,19 +350,29 @@ Today
 
 - Figures, tables
 
---
+---
 
-Next week
+# Next week
 
+.pull-left[
+Normal stuff:
 
 - Bibliographies
+- Slides (Beamer)
+
+Enhanced stuff:
 
 - Workflow integration
 
-- Slides (Beamer)
+New stuff:
 
-- (NEW) R-Markdown (and Rmd-style slides)
+- RMarkdown 
+- Xaringan
+]
 
+.pull-right[
+&lt;img src="img/indignation.png" width = 90%&gt;
+]
 
 
 ---
